--- a/Python_Sales_Analysis.ipynb
+++ b/Python_Sales_Analysis.ipynb
@@ -1,14 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "id": "604f967e-653f-4a12-b7c2-acae1bf40b48",
+   "metadata": {},
+   "source": [
+    "# Sales Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0408733",
+   "metadata": {},
+   "source": [
+    "*Import necessary libraries*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb6e76c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import python libraries\n",
-    "\n",
     "import numpy as np \n",
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt # visualizing data\n",
@@ -256,6 +270,14 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9697304",
+   "metadata": {},
+   "source": [
+    "### Clean up the data!"
    ]
   },
   {
@@ -947,12 +969,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa1d1450",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "eb1cc549",
    "metadata": {},
    "source": [
@@ -1100,7 +1116,7 @@
    "id": "8e990008",
    "metadata": {},
    "source": [
-    "*From above graphs we can see that most of the buyers are of age group between 26-35 years female*"
+    "*From above graphs we can see that most of the buyers are of age group between 26-35 years*"
    ]
   },
   {
