Changers in visualization

--- a/Python_Sales_Analysis.ipynb
+++ b/Python_Sales_Analysis.ipynb
@@ -1507,8 +1507,14 @@
    "id": "ff237567",
    "metadata": {},
    "source": [
-    "*Married women age group 26-35 yrs from UP,  Maharastra and Karnataka working in IT, Healthcare and Aviation are more likely to buy products from Food, Clothing and Electronics category*"
+    "*Married women of age group 26-35 years from UP, Maharastra and Karnataka working in IT, Healthcare and Aviation are more likely to buy products from Food, Clothing and Electronics category*"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e54e52f0",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
